added custom CSS and static files

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,31 +1,36 @@
+{% load staticfiles %}
+
 <html>
     <head>
-        
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+    <link href="http://fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
+
+    </head>
+    <body>
+        <div class="page-header">
+            <h1>Django Girls Blog</h1>
+        </div>
+
         {% for post in posts %}
-            <div>
-                <p>published: {{ post.published_date }}</p>
+            <div class="post">
                 <h1><a href="">{{ post.title }}</a></h1>
+            </div>
+            <div class="details">
+                <p>by: {{ post.author.username }}</p>
+
+                {% if post.published_date.date == post.created_date.date %}
+                    <p>update: {{ post.published_date.time }} | created: {{ post.created_date.date }}</p>
+                {% else %}
+                    <p>update: {{ post.published_date }} | created: {{ post.created_date }}</p>
+                {% endif %}
+
+            </div>
+            <div class="post">
                 <p>{{ post.text|linebreaks }}</p>
             </div>
         {% endfor %}
 
-        <title>Django Girls blog</title>
-    </head>
-<!--     <body>
-        <div>
-            <h1><a href="">Django Girls Blog</a></h1>
-        </div>
-
-        <div>
-            <p>published: 14.06.2014, 12:14</p>
-            <h2><a href="">My first post</a></h2>
-            <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-        </div>
-
-        <div>
-            <p>published: 14.06.2014, 12:14</p>
-            <h2><a href="">My second post</a></h2>
-            <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut f.</p>
-        </div>
-    </body> -->
+    </body>
 </html>
