added post details

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,36 +1,22 @@
-{% load staticfiles %}
+{% extends "blog/base.html" %}
 
-<html>
-    <head>
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="{% static 'css/blog.css' %}">
-    <link href="http://fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
+{% block content %}
+{% for post in posts %}
+    <div class="post">
+        <h1><a href="">{{ post.title }}</a></h1>
+    </div>
+    <div class="details">
+        <p>by: {{ post.author.username }}</p>
 
-    </head>
-    <body>
-        <div class="page-header">
-            <h1>Django Girls Blog</h1>
-        </div>
+        {% if post.published_date.date == post.created_date.date %}
+            <p>update: {{ post.published_date.time }} | created: {{ post.created_date.date }}</p>
+        {% else %}
+            <p>update: {{ post.published_date }} | created: {{ post.created_date }}</p>
+        {% endif %}
 
-        {% for post in posts %}
-            <div class="post">
-                <h1><a href="">{{ post.title }}</a></h1>
-            </div>
-            <div class="details">
-                <p>by: {{ post.author.username }}</p>
-
-                {% if post.published_date.date == post.created_date.date %}
-                    <p>update: {{ post.published_date.time }} | created: {{ post.created_date.date }}</p>
-                {% else %}
-                    <p>update: {{ post.published_date }} | created: {{ post.created_date }}</p>
-                {% endif %}
-
-            </div>
-            <div class="post">
-                <p>{{ post.text|linebreaks }}</p>
-            </div>
-        {% endfor %}
-
-    </body>
-</html>
+    </div>
+    <div class="post">
+        <p>{{ post.text|linebreaks }}</p>
+    </div>
+{% endfor %}
+{% endblock %}
