--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -3,7 +3,7 @@
 {% block content %}
 {% for post in posts %}
     <div class="post">
-        <h1><a href="">{{ post.title }}</a></h1>
+        <h1><a href="{% url "blog.views.post_detail" pk=post.pk %}">{{ post.title }}</a></h1>
     </div>
     <div class="details">
         <p>by: {{ post.author.username }}</p>
