--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <div class="page-header">
-            <h1>Django Girls Blog</h1>
+            <h1><a href="{% url "blog.views.post_list" %}">Django Girls Blog</a></h1>
         </div>
 
         {% block content %}
