--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,10 +1,15 @@
 {% extends "blog/base.html" %}
 
 {% block content %}
+
+<a class="btn btn-default" href="{% url 'post_new' %}">
+NEW ENTRY</a>
+
 {% for post in posts %}
     <div class="post">
         <h1><a href="{% url "blog.views.post_detail" pk=post.pk %}">{{ post.title }}</a></h1>
     </div>
+
     <div class="details">
         <p>by: {{ post.author.username }}</p>
 
