--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -7,7 +7,7 @@ NEW ENTRY</a>
 
 {% for post in posts %}
     <div class="post">
-        <h1><a href="{% url "blog.views.post_detail" pk=post.pk %}">{{ post.title }}</a></h1>
+        <h1><a href="{% url "blog.views.postview.post_detail" pk=post.pk %}">{{ post.title }}</a></h1>
     </div>
 
     <div class="details">
